# chess_export

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
chess_export/: __main__.py  common.py
chess_export/chessdotcom/: export.py  model.py
chess_export/lichess/: export.py  model.py
